test/FAIL/breakcmd/del_bp/04_test_break.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="no break points set"
#-------

load boucle.o
break del 0x1000
